test/negative/701_exception_in_function.err
701_exception_in_function.fx:2:9: error: exceptions can only be defined at module level
 2 | fun f() {
   |         ^
